Add test-utils module
The module contains reusable classes that are helpful with implementing
unit tests for multiple Hono components.

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>